# Hotel-complex-management-system

./: README.md
Client/: CMakeLists.txt  main.cpp  resource.qrc
Client/log/header/: logger.h
Client/network/header/: client.h
Client/network/source/: client.cpp
Client/resources/extra libraries/EToastr/: EToastr.cpp
Client/resources/stylesheet/: mainwindow.qss  usercontrolinterface.qss
Client/widgets/header/: mainwindow.h  usercontrolinterface.h  widgetmanager.h
Client/widgets/source/: mainwindow.cpp  usercontrolinterface.cpp  widgetmanager.cpp
Client/widgets/ui/: mainwindow.ui  usercontrolinterface.ui
Server/: .gitignore  CMakeLists.txt  main.cpp
Server/constants/: constants.h
Server/database/header/: database.h
Server/database/model/header/: bookeddatemodel.h  employeemodel.h  hotelroommodel.h  usermodel.h
Server/database/model/source/: bookeddatemodel.cpp  employeemodel.cpp  hotelroommodel.cpp  usermodel.cpp
Server/database/source/: database.cpp
Server/log/header/: logger.h
Server/log/source/: logger.cpp
Server/network/header/: server.h
Server/network/source/: server.cpp
